ApiTestParser.py
# Generated from ApiTest.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ApiTestParser ( Parser ):

    grammarFileName = "ApiTest.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'base_url'", "'scenario'", "'case'", 
                     "'request'", "'expect'", "'method'", "'path'", "'query'", 
                     "'status'", "'json_has'", "'json_eq'", "<INVALID>", 
                     "':'", "','", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "BASE_URL", "SCENARIO", "CASE", "REQUEST", 
                      "EXPECT", "METHOD", "PATH", "QUERY", "STATUS", "JSON_HAS", 
                      "JSON_EQ", "HTTP_METHOD", "COLON", "COMMA", "LBRACE", 
                      "RBRACE", "ID", "INT", "STRING", "NEWLINE", "WS" ]

    RULE_spec = 0
    RULE_baseDecl = 1
    RULE_scenarioDecl = 2
    RULE_caseDecl = 3
    RULE_requestBlock = 4
    RULE_requestItem = 5
    RULE_methodDecl = 6
    RULE_pathDecl = 7
    RULE_queryDecl = 8
    RULE_queryPair = 9
    RULE_expectBlock = 10
    RULE_expectItem = 11
    RULE_statusDecl = 12
    RULE_jsonHasDecl = 13
    RULE_jsonEqDecl = 14
    RULE_value = 15

    ruleNames =  [ "spec", "baseDecl", "scenarioDecl", "caseDecl", "requestBlock", 
                   "requestItem", "methodDecl", "pathDecl", "queryDecl", 
                   "queryPair", "expectBlock", "expectItem", "statusDecl", 
                   "jsonHasDecl", "jsonEqDecl", "value" ]

    EOF = Token.EOF
    BASE_URL=1
    SCENARIO=2
    CASE=3
    REQUEST=4
    EXPECT=5
    METHOD=6
    PATH=7
    QUERY=8
    STATUS=9
    JSON_HAS=10
    JSON_EQ=11
    HTTP_METHOD=12
    COLON=13
    COMMA=14
    LBRACE=15
    RBRACE=16
    ID=17
    INT=18
    STRING=19
    NEWLINE=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ApiTestParser.EOF, 0)

        def baseDecl(self):
            return self.getTypedRuleContext(ApiTestParser.BaseDeclContext,0)


        def scenarioDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ApiTestParser.ScenarioDeclContext)
            else:
                return self.getTypedRuleContext(ApiTestParser.ScenarioDeclContext,i)


        def getRuleIndex(self):
            return ApiTestParser.RULE_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec" ):
                listener.enterSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec" ):
                listener.exitSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = ApiTestParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 32
                self.baseDecl()


            self.state = 36 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 35
                self.scenarioDecl()
                self.state = 38 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2):
                    break

            self.state = 40
            self.match(ApiTestParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BASE_URL(self):
            return self.getToken(ApiTestParser.BASE_URL, 0)

        def STRING(self):
            return self.getToken(ApiTestParser.STRING, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def getRuleIndex(self):
            return ApiTestParser.RULE_baseDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseDecl" ):
                listener.enterBaseDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseDecl" ):
                listener.exitBaseDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseDecl" ):
                return visitor.visitBaseDecl(self)
            else:
                return visitor.visitChildren(self)




    def baseDecl(self):

        localctx = ApiTestParser.BaseDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_baseDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(ApiTestParser.BASE_URL)
            self.state = 43
            self.match(ApiTestParser.STRING)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.match(ApiTestParser.NEWLINE)
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScenarioDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCENARIO(self):
            return self.getToken(ApiTestParser.SCENARIO, 0)

        def STRING(self):
            return self.getToken(ApiTestParser.STRING, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def caseDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ApiTestParser.CaseDeclContext)
            else:
                return self.getTypedRuleContext(ApiTestParser.CaseDeclContext,i)


        def getRuleIndex(self):
            return ApiTestParser.RULE_scenarioDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScenarioDecl" ):
                listener.enterScenarioDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScenarioDecl" ):
                listener.exitScenarioDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScenarioDecl" ):
                return visitor.visitScenarioDecl(self)
            else:
                return visitor.visitChildren(self)




    def scenarioDecl(self):

        localctx = ApiTestParser.ScenarioDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_scenarioDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(ApiTestParser.SCENARIO)
            self.state = 50
            self.match(ApiTestParser.STRING)
            self.state = 52 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 51
                self.match(ApiTestParser.NEWLINE)
                self.state = 54 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

            self.state = 57 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 56
                self.caseDecl()
                self.state = 59 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(ApiTestParser.CASE, 0)

        def STRING(self):
            return self.getToken(ApiTestParser.STRING, 0)

        def requestBlock(self):
            return self.getTypedRuleContext(ApiTestParser.RequestBlockContext,0)


        def expectBlock(self):
            return self.getTypedRuleContext(ApiTestParser.ExpectBlockContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def getRuleIndex(self):
            return ApiTestParser.RULE_caseDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCaseDecl" ):
                listener.enterCaseDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCaseDecl" ):
                listener.exitCaseDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCaseDecl" ):
                return visitor.visitCaseDecl(self)
            else:
                return visitor.visitChildren(self)




    def caseDecl(self):

        localctx = ApiTestParser.CaseDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_caseDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ApiTestParser.CASE)
            self.state = 62
            self.match(ApiTestParser.STRING)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.match(ApiTestParser.NEWLINE)
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

            self.state = 68
            self.requestBlock()
            self.state = 69
            self.expectBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequestBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUEST(self):
            return self.getToken(ApiTestParser.REQUEST, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def requestItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ApiTestParser.RequestItemContext)
            else:
                return self.getTypedRuleContext(ApiTestParser.RequestItemContext,i)


        def getRuleIndex(self):
            return ApiTestParser.RULE_requestBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequestBlock" ):
                listener.enterRequestBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequestBlock" ):
                listener.exitRequestBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequestBlock" ):
                return visitor.visitRequestBlock(self)
            else:
                return visitor.visitChildren(self)




    def requestBlock(self):

        localctx = ApiTestParser.RequestBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_requestBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(ApiTestParser.REQUEST)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.match(ApiTestParser.NEWLINE)
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 77
                self.requestItem()
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequestItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDecl(self):
            return self.getTypedRuleContext(ApiTestParser.MethodDeclContext,0)


        def pathDecl(self):
            return self.getTypedRuleContext(ApiTestParser.PathDeclContext,0)


        def queryDecl(self):
            return self.getTypedRuleContext(ApiTestParser.QueryDeclContext,0)


        def getRuleIndex(self):
            return ApiTestParser.RULE_requestItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequestItem" ):
                listener.enterRequestItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequestItem" ):
                listener.exitRequestItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequestItem" ):
                return visitor.visitRequestItem(self)
            else:
                return visitor.visitChildren(self)




    def requestItem(self):

        localctx = ApiTestParser.RequestItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_requestItem)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.methodDecl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.pathDecl()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.queryDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHOD(self):
            return self.getToken(ApiTestParser.METHOD, 0)

        def HTTP_METHOD(self):
            return self.getToken(ApiTestParser.HTTP_METHOD, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def getRuleIndex(self):
            return ApiTestParser.RULE_methodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecl" ):
                listener.enterMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecl" ):
                listener.exitMethodDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = ApiTestParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(ApiTestParser.METHOD)
            self.state = 88
            self.match(ApiTestParser.HTTP_METHOD)
            self.state = 90 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 89
                self.match(ApiTestParser.NEWLINE)
                self.state = 92 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATH(self):
            return self.getToken(ApiTestParser.PATH, 0)

        def STRING(self):
            return self.getToken(ApiTestParser.STRING, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def getRuleIndex(self):
            return ApiTestParser.RULE_pathDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPathDecl" ):
                listener.enterPathDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPathDecl" ):
                listener.exitPathDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPathDecl" ):
                return visitor.visitPathDecl(self)
            else:
                return visitor.visitChildren(self)




    def pathDecl(self):

        localctx = ApiTestParser.PathDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pathDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(ApiTestParser.PATH)
            self.state = 95
            self.match(ApiTestParser.STRING)
            self.state = 97 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self.match(ApiTestParser.NEWLINE)
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUERY(self):
            return self.getToken(ApiTestParser.QUERY, 0)

        def LBRACE(self):
            return self.getToken(ApiTestParser.LBRACE, 0)

        def queryPair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ApiTestParser.QueryPairContext)
            else:
                return self.getTypedRuleContext(ApiTestParser.QueryPairContext,i)


        def RBRACE(self):
            return self.getToken(ApiTestParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.COMMA)
            else:
                return self.getToken(ApiTestParser.COMMA, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def getRuleIndex(self):
            return ApiTestParser.RULE_queryDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryDecl" ):
                listener.enterQueryDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryDecl" ):
                listener.exitQueryDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryDecl" ):
                return visitor.visitQueryDecl(self)
            else:
                return visitor.visitChildren(self)




    def queryDecl(self):

        localctx = ApiTestParser.QueryDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_queryDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ApiTestParser.QUERY)
            self.state = 102
            self.match(ApiTestParser.LBRACE)
            self.state = 103
            self.queryPair()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 104
                self.match(ApiTestParser.COMMA)
                self.state = 105
                self.queryPair()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self.match(ApiTestParser.RBRACE)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.match(ApiTestParser.NEWLINE)
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryPairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ApiTestParser.ID, 0)

        def COLON(self):
            return self.getToken(ApiTestParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(ApiTestParser.ValueContext,0)


        def getRuleIndex(self):
            return ApiTestParser.RULE_queryPair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryPair" ):
                listener.enterQueryPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryPair" ):
                listener.exitQueryPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryPair" ):
                return visitor.visitQueryPair(self)
            else:
                return visitor.visitChildren(self)




    def queryPair(self):

        localctx = ApiTestParser.QueryPairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_queryPair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(ApiTestParser.ID)
            self.state = 118
            self.match(ApiTestParser.COLON)
            self.state = 119
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpectBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPECT(self):
            return self.getToken(ApiTestParser.EXPECT, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def expectItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ApiTestParser.ExpectItemContext)
            else:
                return self.getTypedRuleContext(ApiTestParser.ExpectItemContext,i)


        def getRuleIndex(self):
            return ApiTestParser.RULE_expectBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpectBlock" ):
                listener.enterExpectBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpectBlock" ):
                listener.exitExpectBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpectBlock" ):
                return visitor.visitExpectBlock(self)
            else:
                return visitor.visitChildren(self)




    def expectBlock(self):

        localctx = ApiTestParser.ExpectBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expectBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(ApiTestParser.EXPECT)
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 122
                self.match(ApiTestParser.NEWLINE)
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

            self.state = 128 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 127
                self.expectItem()
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3584) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpectItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statusDecl(self):
            return self.getTypedRuleContext(ApiTestParser.StatusDeclContext,0)


        def jsonHasDecl(self):
            return self.getTypedRuleContext(ApiTestParser.JsonHasDeclContext,0)


        def jsonEqDecl(self):
            return self.getTypedRuleContext(ApiTestParser.JsonEqDeclContext,0)


        def getRuleIndex(self):
            return ApiTestParser.RULE_expectItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpectItem" ):
                listener.enterExpectItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpectItem" ):
                listener.exitExpectItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpectItem" ):
                return visitor.visitExpectItem(self)
            else:
                return visitor.visitChildren(self)




    def expectItem(self):

        localctx = ApiTestParser.ExpectItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expectItem)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.statusDecl()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.jsonHasDecl()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.jsonEqDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatusDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATUS(self):
            return self.getToken(ApiTestParser.STATUS, 0)

        def INT(self):
            return self.getToken(ApiTestParser.INT, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def getRuleIndex(self):
            return ApiTestParser.RULE_statusDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatusDecl" ):
                listener.enterStatusDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatusDecl" ):
                listener.exitStatusDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatusDecl" ):
                return visitor.visitStatusDecl(self)
            else:
                return visitor.visitChildren(self)




    def statusDecl(self):

        localctx = ApiTestParser.StatusDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statusDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(ApiTestParser.STATUS)
            self.state = 138
            self.match(ApiTestParser.INT)
            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139
                self.match(ApiTestParser.NEWLINE)
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JsonHasDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def JSON_HAS(self):
            return self.getToken(ApiTestParser.JSON_HAS, 0)

        def STRING(self):
            return self.getToken(ApiTestParser.STRING, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ApiTestParser.NEWLINE)
            else:
                return self.getToken(ApiTestParser.NEWLINE, i)

        def getRuleIndex(self):
            return ApiTestParser.RULE_jsonHasDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJsonHasDecl" ):
                listener.enterJsonHasDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJsonHasDecl" ):
                listener.exitJsonHasDecl(self)
